# STAMP

./: .gitignore  LICENSE  README copy.md  README.md  categorical_crossval.sh  config.yaml  debug.py  getting-started.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  format.yml
docs/: README.md
end2end-WSI-preprocessing/: wsi-norm.py
end2end-WSI-preprocessing/helpers/: common.py  concurrent_canny_rejection.py  feature_extractors.py  loading_slides.py  stainNorm_Macenko.py  stain_utils.py
example_scripts/: LOCAL_preprocessing.sh  SLURM_batch_setup.sh  SLURM_preprocessing.sh
mcp/: README.md  server.py
modeling/: modeling.py  statistics.py
modeling/marugoto/stats/: categorical.py
modeling/marugoto/transformer/: base.py  data.py  helpers.py
modeling/marugoto/visualizations/: prc.py  roc.py
multiplex-notebooks/: 1 - Split-Channels-feature-extraction.ipynb  2 - Multi-Channels-feature-extraction.ipynb  3 - Patient-level-Data-preparation.ipynb  4- Training.ipynb
preprocessing/: wsi-norm.py
preprocessing/helpers/: feature_extractors.py  swin_transformer.py
scripts/: generate_blast_report.py  generate_report.py  run_heatmaps_per_split.py
setup/: cenv_conda.txt  container.def  setup.sh  test_workflow_setup.sh
src/stamp/: __init__.py  __main__.py  cache.py  config.py  config.yaml  seed.py  stamp_aml_blast_percent_uni2_config.yaml  stamp_aml_blast_severity_uni2_config.yaml  stamp_aml_high_blast_uni2_config.yaml  stamp_aml_response_uni2_config.yaml  types.py
src/stamp/encoding/: __init__.py  config.py
src/stamp/encoding/encoder/: __init__.py  chief.py  cobra.py  cobraII.py  eagle.py  gigapath.py  madeleine.py  prism.py  ticon_encoder.py  titan.py
src/stamp/heatmaps/: __init__.py  attention_ui.py  config.py
src/stamp/modeling/: alibi.py  config.py  crossval.py  data.py  deploy.py  lightning_cobra.py  lightning_model.py  mlp_classifier.py  registry.py  tabular_config.py  train.py  transforms.py  vision_transformer.py
src/stamp/modeling/barspoon/: README.md  __init__.py  crossval.py  data.py  deploy.py  heatmaps.py  model.py  target_file.py  test.toml  train.py  utils.py
src/stamp/modeling/classifier/: __init__ copy.py  __init__.py  ctransformer.py  mlp.py  trans_mil.py  transformer.py
src/stamp/modeling/models/: __init__.py  barspoon.py  cox.py  ft_transformer.py  mil_tabular.py  mlp.py  tab_transformer.py  ticon_architecture.py  trans_mil.py  vision_tranformer.py
src/stamp/modeling/models/classifier/: mlp.py  trans_mil.py  vision_tranformer.py
src/stamp/modeling/models/regressor/: __init__.py  hist2cell.py  mlp.py
src/stamp/modeling/regressor/: __init__.py  mlp.py
src/stamp/modeling/transformer/: base.py  data.py  helpers.py
src/stamp/preprocessing/: __init__.py  config.py  extract.py  tiling.py
src/stamp/preprocessing/extractor/: __init__.py  chief_ctranspath.py  conch.py  conch1_5.py  conchv1_5.py  ctranspath.py  dinobloom.py  empty.py  gigapath.py  h_optimus_0.py  h_optimus_1.py  keep.py  kronos.py  mstar.py  musk.py  plip.py  reddino.py  ticon.py  ticon_iso.py  uni.py  uni2.py  virchow.py  virchow2.py  virchow_full.py
src/stamp/slide_encoding/: __init__.py  config.py
src/stamp/slide_encoding/encoder/: __init__.py  chief.py  cobra.py
src/stamp/statistics/: __init__.py  categorical.py  prc.py  regression.py  roc.py  survival.py
src/stamp/utils/: cache.py  seed.py  target_file.py
src/stamp/workbench/: __init__.py  catalog.py  server.py  service.py
src/stamp/workbench/static/: app.js  index.html  styles.css
stamp/: __main__.py  cli.py  config.py  config.yaml  utils.py
stamp/heatmaps/: __init__.py  __main__.py  config.py
stamp/modeling/: config.py  modeling.py  statistics.py
stamp/modeling/marugoto/stats/: categorical.py
stamp/modeling/marugoto/transformer/: TransMIL.py  ViT.py  base.py  data.py  helpers.py
stamp/modeling/marugoto/visualizations/: mil_heatmaps.py  mil_top_tiles.py  prc.py  roc.py
stamp/modeling/transformer/: base.py  transmil.py
stamp/preprocessing/: README.md  config.py  extract.py  tiling.py  wsi_norm.py
stamp/preprocessing/extractor/: __init__.py  conch.py  ctranspath.py  dinobloom.py  feature_extractors.py  swin_transformer.py
stamp/preprocessing/helpers/: background_rejection.py  common.py  concurrent_canny_rejection.py  exceptions.py  extractTiles-ws.py  feature_extractors.py  load_patches.py  load_slides.py  loading_slides.py  stainNorm_Macenko.py  stain_utils.py  swin_transformer.py
stamp/preprocessing/normalizer/: normalizer.py  utils.py
stamp/scripts/: extract_attention.py
stamp/statistics/: prc.py  roc.py
tests/: conftest.py  make_test_models.py  random_data.py  test_alibi.py  test_attention_ui_integration.py  test_backwards_compatability.py  test_cache_tiles.py  test_case_insensitive_wsi_discovery.py  test_config.py  test_crossval.py  test_data.py  test_deploy.py  test_deployment.py  test_deployment_backward_compatability.py  test_deployment_backward_compatibility.py  test_encoders.py  test_feature_extractors.py  test_heatmaps.py  test_mics.py  test_model.py  test_statistics.py  test_train_deploy.py  test_transform.py  test_vary_precision_transform.py  test_workbench.py
