[project]
name = "stamp"
version = "2.5.0"
authors = [
    { name = "Omar El Nahhas", email = "omar.el_nahhas@tu-dresden.de" },
    { name = "Marko van Treeck", email = "markovantreeck@gmail.com" },
    { name = "Georg Wölflein", email = "georgw7777@gmail.com" },
    { name = "Tim Lenz", email = "tim.lenz@tu-dresden.de" },
    { name = "Laura Žigutytė", email = "laura.zigutyte@tu-dresden.de" },
    { name = "Cornelius Kummer", email = "cornelius.kummer@tu-dresden.de" },
    { name = "Juan Pablo Ricapito", email = "juan_pablo.ricapito@tu-dresden.de" },
    { name = "Fabian Wolf", email = "fabian.wolf2@tu-dresden.de" },
    { name = "Minh Duc Nguyen", email = "minh_duc.nguyen1@tu-dresden.de" }
]
description = "A protocol for Solid Tumor Associative Modeling in Pathology"
readme = "README.md"
requires-python = ">=3.13,<3.14"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "beartype~=0.22.9",
    "einops~=0.8.2",
    "h5py~=3.16.0",
    "jaxtyping~=0.3.9",
    "lightning~=2.6.1",
    "matplotlib~=3.10.8",
    "numpy~=2.4.3",
    "opencv-python~=4.13.0.92",
    "openpyxl~=3.1.5",
    "openslide-bin~=4.0.0.13",
    "openslide-python~=1.4.3",
    "packaging~=26.0",
    "pandas~=2.3.3",
    "pillow~=12.1.1",
    "pydantic~=2.12.5",
    "pyyaml~=6.0.3",
    "scikit-learn~=1.8.0",
    "scipy~=1.17.1",
    "torch~=2.10.0",
    "torchmetrics~=1.9.0",
    "torchvision~=0.25.0",
    "tqdm~=4.67.3",
    "timm~=1.0.25",
    "transformers~=4.57.6",
    "lifelines~=0.30.3",
    "huggingface-hub~=0.36.2"
]

[project.optional-dependencies]
build = [
    "setuptools",
    "hatchling",
    "psutil",
    "ninja"
]
flash-attention = [
    "flash-attn==2.8.3",
    ]
conch = [
    "huggingface-hub>=0.26.2",
    "conch @ git+https://github.com/KatherLab/CONCH",
]
conch1_5_cpu = [
    "einops-exts==0.0.4",
]
conch1_5 = [
    "stamp[conch1_5_cpu, flash-attention]",
]
ctranspath = [
    "gdown>=5.2.0",
]
chief_ctranspath = [
    "gdown>=5.2.0",
    "torch>=2.0.0"
]
gigapath = [
    "stamp[flash-attention]",
    "gigapath @ git+https://github.com/KatherLab/prov-gigapath.git@ec97baa5f071319680132e18868279b4cca877cc",
    "fvcore",
    "iopath",
    "monai",
    "scikit-image",
    "webdataset",
    "scikit-survival>=0.24.1",
    "fairscale",
    "wandb",
]
uni = [
    "huggingface-hub>=0.26.2",
    "uni @ git+https://github.com/KatherLab/uni.git@f37c299eb0bffa0e585f120974082cfec6ee6d53",
]
virchow2 = [
    "huggingface-hub>=0.27.1",
    "torch>=2.0.0",
]
cobra = [
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.1.post4/causal_conv1d-1.6.1+cu13torch2.10cxx11abiTRUE-cp313-cp313-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.1.post4/causal_conv1d-1.6.1+cu13torch2.10cxx11abiTRUE-cp313-cp313-linux_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.13'",

    "mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v2.3.1/mamba_ssm-2.3.1+cu13torch2.10cxx11abiTRUE-cp313-cp313-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'",
    "mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v2.3.1/mamba_ssm-2.3.1+cu13torch2.10cxx11abiTRUE-cp313-cp313-linux_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.13'",

    "cobra @ git+http://github.com/KatherLab/COBRA.git@49d231191db5a9c2ea37a2398dd922c8c9ee9cdb",
    "jinja2>=3.1.4",
    "triton",
]
prism_cpu = [
    "sacremoses==0.1.1",
    "environs==11.0.0",
]
prism = [
    "stamp[prism_cpu]",
]
madeleine = [
    "madeleine @ git+https://github.com/mahmoodlab/MADELEINE.git@de7c85acc2bdad352e6df8eee5694f8b6f288012"
]
musk_cpu = [
    "musk @ git+https://github.com/lilab-stanford/MUSK.git@e1699c27687f44bbf6d4adfcbb2abe89795d347f",
    "fairscale",
]
musk = [
    "stamp[musk_cpu, flash-attention]",
]
plip_cpu = [
    "transformers>=4.45.2"
]
plip = [
    "stamp[plip_cpu]",
]
mcp = [
    "fastmcp>=2.11.2",
]


# Blanket target
cpu = ["stamp[conch,ctranspath,uni,virchow2,chief_ctranspath,conch1_5_cpu,prism_cpu,madeleine,musk_cpu,plip_cpu]"]
gpu = ["stamp[conch,ctranspath,uni,virchow2,chief_ctranspath,conch1_5_cpu,prism,madeleine,plip,musk_cpu,cobra]"]
gpu_all = ["stamp[conch,ctranspath,uni,virchow2,chief_ctranspath,musk,gigapath,conch1_5,prism,madeleine,plip,cobra]"]
all = ["stamp[cpu]"]

[project.scripts]
"stamp" = "stamp.__main__:main"

[project.urls]
"Homepage" = "https://github.com/KatherLab/STAMP"
"Bug Tracker" = "https://github.com/KatherLab/STAMP/issues"

[dependency-groups]
dev = [
    "huggingface-hub~=0.36.2",
    "ipykernel~=7.2.0",
    "pyright~=1.1.408",
    "pytest~=9.0.2",
    "ruff>=0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# To allow referencing git repos in dependencies
allow-direct-references = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
lint.ignore = ["F722"] # https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" }
    ]
]
build-constraint-dependencies = [
  "torch==2.10.0",
  "torchvision==0.25.0",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" }
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[[tool.uv.dependency-metadata]]
name = "uni"
version = "v0.1.0"
requires-dist = [
    "torch>=2.0.1",
    "torchvision",
    "timm>=0.9.8",
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "transformers",
    "xformers; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and platform_machine == 'AMD64')"
]


[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = [
    "torch",
    "einops",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
gigapath = [{ requirement = "torch", match-runtime = true }]
conch = [{ requirement = "torch", match-runtime = true }]
